feat(reactnative,package): rn-system-navigation package is ready to use

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "type": "git",
     "url": "git+https://github.com/dev-angle/rn-system-navigation.git"
   },
-  "author": "tiny-angle <sauravayush245@gmail.com> (https://github.com/dev-angle)",
+  "author": "dev-angle <sauravayush245@gmail.com> (https://github.com/dev-angle)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/dev-angle/rn-system-navigation/issues"
