--- a/package.json
+++ b/package.json
@@ -122,7 +122,8 @@
     "plugins": {
       "@release-it/conventional-changelog": {
         "preset": "angular"
-      }
+      },
+    "infile": "CHANGELOG.md"
     }
   },
   "eslintConfig": {
