--- a/package.json
+++ b/package.json
@@ -121,9 +121,12 @@
     },
     "plugins": {
       "@release-it/conventional-changelog": {
-        "preset": "angular"
-      },
-    "infile": "CHANGELOG.md"
+        "infile": "CHANGELOG.md",
+        "header": "# Changelog",
+        "preset": {
+          "name": "conventionalcommits"
+        }
+      }
     }
   },
   "eslintConfig": {
